Added sample Zoom snippet

--- a/Darwin.csproj
+++ b/Darwin.csproj
@@ -15,6 +15,9 @@
     <None Update="Sounds\01.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Sounds\02.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
